add Address page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div style="background-color: rgb(243, 107, 107); margin-left: 20px;">
                 <a href="contact.html" class="link" >Contact</a>
             </div>
+            <div style="background-color: rgb(243, 107, 107); margin-left: 20px;">
+                <a href="contact.html" class="link" >Address</a>
+            </div>
         </div>
     </div>
     <h1><u><i><b>My first website in css:-</b></i></i></u></h1>
